# cloudcut

./: .env.example  .gitignore  Caddyfile  Cargo.toml  DESIGN.md  README.md  TEST.md  docker-compose.yml
backend/: Dockerfile.api  Dockerfile.worker
backend/api/: Cargo.toml
backend/api/src/: error.rs  main.rs
backend/api/src/handlers/: assets.rs  auth.rs  mod.rs  projects.rs
backend/api/src/middleware/: auth.rs
backend/migrations/: 0001_init.sql  0002_indexes.sql  0003_seed.sql
backend/shared/: Cargo.toml
backend/shared/src/: db.rs  lib.rs  models.rs
backend/worker/: Cargo.toml
backend/worker/src/: export_pipeline.rs  main.rs  processor.rs
frontend/: Dockerfile  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: axios.ts
frontend/src/components/: AssetPool.tsx  ExportModal.tsx  ProtectedRoute.tsx  Timeline.tsx  index.ts
frontend/src/components/player/: VideoPlayer.tsx
frontend/src/components/timeline/: Playhead.tsx  TimelineRuler.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/lib/: swal.tsx
frontend/src/pages/: DashboardPage.tsx  EditorPage.tsx  LoginPage.tsx  flow-export.tsx  index.ts
frontend/src/stores/: authStore.ts  playbackStore.ts  projectStore.ts  uiStore.ts
frontend/src/types/: index.ts
lambda/export-4k/: Cargo.toml  Dockerfile
lambda/export-4k/src/: main.rs
