[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
jsonwebtoken = "9"
bcrypt = "0.15"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["serde", "v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
validator = { version = "0.18", features = ["derive"] }
aws-config = "1"
aws-sdk-s3 = "1"
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.25", features = ["tokio-comp", "json"] }
